--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <meta charset="UTF-8">
-    <title>ARG</title>
-    <style>
-        body {
-            background: black;
-            color: white;
-            font-family: monospace;
-            text-align: center;
-            margin-top: 100px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>ARG</title>
+  <style>
+    body {
+      background: black;
+      color: white;
+      font-family: monospace;
+      text-align: center;
+      margin-top: 100px;
+    }
+  </style>
 </head>
 <body>
 
-<h1 id="text">...</h1>
+<h1 id="output">...</h1>
 
 <script>
-    // Hent ordet efter /
-    let path = window.location.pathname;
+  // 1. Hent hele stien
+  let path = window.location.pathname;
 
-    // Hvis repo hedder arg-site, fjern det
-    path = path.replace("/arg-site/", "");
+  // 2. Ret dette til dit repo-navn
+  path = path.replace("/arg-site/", "");
 
-    let word = path.replace("/", "");
+  // 3. Fjern evt. /
+  let word = path.replace("/", "");
 
-    const text = document.getElementById("text");
+  const output = document.getElementById("output");
 
-    if (word === "") {
-        text.textContent = "Skriv et ord efter /";
-    }
-    else if (word === "hej") {
-        text.textContent = "Hej... du fandt det første spor.";
-    }
-    else if (word === "spor1") {
-        text.textContent = "Næste spor: /spor2";
-    }
-    else if (word === "spor2") {
-        text.textContent = "Du er kommet for langt.";
-    }
-    else {
-        text.textContent = "Ukendt.";
-    }
+  // 4. Reaktioner
+  if (word === "") {
+    output.textContent = "Skriv et ord efter /";
+  }
+  else if (word === "hej") {
+    output.textContent = "Hej... du burde ikke være her.";
+  }
+  else if (word === "spor1") {
+    output.textContent = "Næste spor er gemt et andet sted.";
+  }
+  else if (word === "sandheden") {
+    output.textContent = "Du er tæt på.";
+  }
+  else {
+    output.textContent = "Ukendt signal.";
+  }
 </script>
 
 </body>
