--- a/index.html
+++ b/index.html
@@ -36,30 +36,12 @@
   const hint = document.getElementById("hint");
 
   // Tjek ord og vis beskeder
-  switch(word) {
-    case "":
-      output.textContent = "Velkommen… skriv et ord efter /";
-      hint.textContent = "fx: /hej, /spor1, /sandheden";
-      break;
-    case "hej":
-      output.textContent = "Hej… du fandt første spor.";
-      hint.textContent = "Næste spor: /spor1";
-      break;
-    case "spor1":
-      output.textContent = "Godt! Du er på sporet.";
-      hint.textContent = "Næste spor: /spor2";
-      break;
-    case "spor2":
-      output.textContent = "Du er tæt på sandheden!";
-      hint.textContent = "Hint: prøv /sandheden";
-      break;
-    case "sandheden":
-      output.textContent = "🎉 Du fandt sandheden! 🎉";
-      hint.textContent = "Tak fordi du spillede med.";
-      break;
-    default:
-      output.textContent = "Ukendt signal…";
-      hint.textContent = "Prøv et andet ord.";
+/arg-site/
+/arg-site/hej
+/arg-site/spor1
+/arg-site/spor2
+/arg-site/sandheden
+
   }
 </script>
 
